Recording job, fetching from CDR, and uploading to GCS

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -17,11 +17,13 @@
   //    }
   //  }
   //},
+
   "ElasticConfiguration": {
     "Uri": "https://10.40.2.118:9200/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RMODH-0647;Database=10X_Staging;Trusted_Connection=True;"
+    "DefaultConnection": "Server=RMODH-0647;Database=10X_Staging;Trusted_Connection=True;",
+    "10xStaging": "Server=10.40.23.7;Database=Castanet;Trusted_Connection=True;user ID=coditasdev;Password=D3v8FnE@BVs; Integrated Security = false;"
   },
   "JWT": {
     "Secret": "FCMZl4ry3dprgbT53Or2",
@@ -34,7 +36,11 @@
   "SFTPCompanyName": "Test1ConnectAndSell",
   "SFTPDisposition": "Interest, Send Information",
 
+  "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
   "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
-
+  "CASRecordingRequestTimeOut": 900000,
+  "S3RecordingBaseKey": "OOD/Recordings/",
+  "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json\\",
+  "GCSBucketName": "cas-mp3-recording",
   "AllowedHosts": "*"
 }
