--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -9,4 +9,10 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Constants\AreaPhoneCodeMap.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
