--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -21,7 +21,7 @@
     "Uri": "https://10.40.2.118:9200/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RMODH-0647;Database=10X_Staging;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-IVRP2EU;Database=10X_Staging;Trusted_Connection=True;"
   },
   "JWT": {
     "Secret": "FCMZl4ry3dprgbT53Or2",
@@ -33,8 +33,16 @@
   "SFTP-S3Bucket": "cas-market-resource-partners-recordings",
   "SFTPCompanyName": "Test1ConnectAndSell",
   "SFTPDisposition": "Interest, Send Information",
+  "RecordingsAreaPhoneCodeMapPath": "C:\\ConnectAndSell\\RecordingAPI\\RecordingService0.1\\Domain\\Constants\\AreaPhoneCodeMap.json",
 
+  "SupportEmailFromName": "ConnectAndSell Support",
+  "JobStatusFromEmail": "engineering@connectandsell.com",
+  "JobStatusMailingList": "cas-support@kuliza.com",
+
+  "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
   "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
-
+  "S3RecordingBaseKey": "OOD/Recordings/",
+  "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json\\",
+  "GCSBucketName": "cas-mp3-recording",
   "AllowedHosts": "*"
 }
