Convert wav to mp3, common functions and Email service changes added

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -35,6 +35,11 @@
   "SFTP-S3Bucket": "cas-market-resource-partners-recordings",
   "SFTPCompanyName": "Test1ConnectAndSell",
   "SFTPDisposition": "Interest, Send Information",
+  "RecordingsAreaPhoneCodeMapPath": "C:\\ConnectAndSell\\RecordingAPI\\RecordingService0.1\\Domain\\Constants\\AreaPhoneCodeMap.json",
+
+  "SupportEmailFromName": "ConnectAndSell Support",
+  "JobStatusFromEmail": "engineering@connectandsell.com",
+  "JobStatusMailingList": "cas-support@kuliza.com",
 
   "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
   "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
