--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -22,7 +22,7 @@
     "Uri": "https://10.40.2.118:9200/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RMODH-0647;Database=10X_Staging;Trusted_Connection=True;",
+    "DefaultConnection": "Server=DESKTOP-IVRP2EU;Database=10X_Staging;Trusted_Connection=True;",
     "10xStaging": "Server=10.40.23.7;Database=Castanet;Trusted_Connection=True;user ID=coditasdev;Password=D3v8FnE@BVs; Integrated Security = false;"
   },
   "JWT": {
