--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -22,7 +22,7 @@
     "Uri": "https://10.40.2.118:9200/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RMODH-0647;Database=10X_Staging;Trusted_Connection=True;",
+    "DefaultConnection": "Server= ;Database=10X_Staging;Trusted_Connection=True;",
     "10xStaging": "Server=10.40.23.7;Database=Castanet;Trusted_Connection=True;user ID=coditasdev;Password=D3v8FnE@BVs; Integrated Security = false;"
   },
   "JWT": {
@@ -40,7 +40,7 @@
   "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
   "CASRecordingRequestTimeOut": 900000,
   "S3RecordingBaseKey": "OOD/Recordings/",
-  "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json\\",
+  "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json",
   "GCSBucketName": "cas-mp3-recording",
   "AllowedHosts": "*"
 }
