Api Service Authorization

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -30,6 +30,9 @@
     "ValidIssuer": "https://localhost:44374/",
     "ValidAudience": "https://localhost:44374/"
   },
+  "Auth": {
+    "Secret": "FCMZl4ry3dprgbT53Or2"
+  },
 
   "SFTPRecordingSpecific": "true",
   "SFTP-S3Bucket": "cas-market-resource-partners-recordings",
