--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Elastic.Transport" Version="0.3.2" />
     <PackageReference Include="FluentValidation" Version="11.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.1" />
+    <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.0.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
