changes regarding file directory creation, saving the cdr file directly to content server, and auth using gcs secret manager

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -45,7 +45,7 @@
   "JobStatusMailingList": "cas-support@kuliza.com",
 
   "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
-  "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
+  "RecordingsBasePath": "\\\\PROD-CONTENT\\Recordings\\RecordingsTest\\",
   "CASRecordingRequestTimeOut": 900000,
   "S3RecordingBaseKey": "OOD/Recordings/",
   "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json",
