--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -38,14 +38,15 @@
   "SFTP-S3Bucket": "cas-market-resource-partners-recordings",
   "SFTPCompanyName": "Test1ConnectAndSell",
   "SFTPDisposition": "Interest, Send Information",
-  "RecordingsAreaPhoneCodeMapPath": "C:\\ConnectAndSell\\RecordingAPI\\RecordingService0.1\\Domain\\Constants\\AreaPhoneCodeMap.json",
+  "RecordingsAreaPhoneCodeMapPath": "C:\\Users\\Coditas\\source\\repos\\RND\\Clean1.0\\Domain\\Constants\\AreaPhoneCodeMap.json",
 
   "SupportEmailFromName": "ConnectAndSell Support",
   "JobStatusFromEmail": "engineering@connectandsell.com",
   "JobStatusMailingList": "cas-support@kuliza.com",
 
   "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
-  "RecordingsBasePath": "\\\\PROD-CONTENT\\Recordings\\RecordingsTest\\",
+  //"RecordingsBasePath": "\\\\PROD-CONTENT\\Recordings\\RecordingsTest\\",
+  "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
   "CASRecordingRequestTimeOut": 900000,
   "S3RecordingBaseKey": "OOD/Recordings/",
   "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json",
