--- a/Web/appsettings.DevDevelopment.json
+++ b/Web/appsettings.DevDevelopment.json
@@ -45,11 +45,9 @@
   "JobStatusMailingList": "cas-support@kuliza.com",
 
   "RecordingsServerBasePath": "http://cdr.connectandsell.com/php/",
-  //"RecordingsBasePath": "\\\\PROD-CONTENT\\Recordings\\RecordingsTest\\",
-  "RecordingsBasePath": "C:\\RecordingsCache\\temp\\",
+  "RecordingsBasePath": "\\\\PROD-CONTENT\\Recordings\\RecordingsTest\\",
   "CASRecordingRequestTimeOut": 900000,
   "S3RecordingBaseKey": "OOD/Recordings/",
-  "GoogleAuthFilePath": "C:\\GoogleAuthFile\\cas-prod-env-20199499a56a.json",
   "GCSBucketName": "cas-mp3-recording",
   "AllowedHosts": "*"
 }
