--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -7,10 +8,7 @@
       "sslPort": 44374
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-
   "profiles": {
-
     "Web": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -48,8 +46,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:49740"
+      "applicationUrl": "http://localhost:49740",
+      "dotnetRunMessages": "true"
+    },
+    "Profile 1": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
