--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Products\EventHandlers\" />
+    <Folder Include="ApplicationUser\Commands\" />
     <Folder Include="Recordings\Commands\" />
   </ItemGroup>
 
